chore: docs/mcp publish/code quality
